Skills Section Update

--- a/index.html
+++ b/index.html
@@ -279,76 +279,99 @@
         <div class="lead mb-5">
             <h2 class="mb-5" data-en="Skills" data-pt="Habilidades">Skills</h2>
             <div class="subheading mb-3" data-en="Technical Skills" data-pt="Habilidades Técnicas">Technical Skills</div>
-
             <div class="row">
                 <!-- Primeira coluna (esquerda) -->
                 <div class="col-md-6">
                     <!-- HTML5 Skill Bar -->
-                    <p data-en="HTML5" data-pt="HTML5">HTML5</p>
                     <div class="skill-bar">
-                        <i class="fab fa-html5" style="font-size:48px; color:#385bbd; margin-right:15px;"></i>
+                        <p data-en="HTML5" data-pt="HTML5">
+                            <i class="fab fa-html5" style="font-size:38px; color:#385bbd; margin-right:10px;"></i>&nbsp;HTML5
+                        </p>
                         <div class="progress">
                             <div class="progress-bar" data-skill="40"></div>
                         </div>
                     </div><br>
                     <!-- CSS3 Skill Bar -->
-                    <p data-en="CSS" data-pt="CSS">CSS</p>
                     <div class="skill-bar">
-                        <i class="fab fa-css3-alt" style="font-size:48px; color:#385bbd; margin-right:15px;"></i>
+                        <p data-en="CSS" data-pt="CSS">
+                            <i class="fab fa-css3-alt" style="font-size:38px; color:#385bbd; margin-right:10px;"></i>&nbsp;CSS
+                        </p>
                         <div class="progress">
                             <div class="progress-bar" data-skill="30"></div>
                         </div>
                     </div><br>
                     <!-- JavaScript Skill Bar -->
-                    <p data-en="JAVASCRIPT" data-pt="JAVASCRIPT">JAVASCRIPT</p>
                     <div class="skill-bar">
-                        <i class="fab fa-js-square" style="font-size:48px; color:#385bbd; margin-right:15px;"></i>
+                        <p data-en="JAVASCRIPT" data-pt="JAVASCRIPT">
+                            <i class="fab fa-js-square" style="font-size:38px; color:#385bbd; margin-right:10px;"></i>&nbsp;JAVASCRIPT
+                        </p>
                         <div class="progress">
                             <div class="progress-bar" data-skill="30"></div>
                         </div>
                     </div><br>
                     <!-- React Skill Bar -->
-                     <p data-en="REACT" data-pt="REACT">REACT</p>
                      <div class="skill-bar">
-                        <i class="fab fa-react" style="font-size:48px; color:#385bbd; margin-right:15px;"></i>
+                        <p data-en="REACT" data-pt="REACT">
+                            <i class="fab fa-react" style="font-size:38px; color:#385bbd; margin-right:10px;"></i>&nbsp;REACT
+                        </p>
                         <div class="progress">
                             <div class="progress-bar" data-skill="20"></div>
                         </div>
                     </div><br>
-                <!-- Segunda coluna (direita) -->
-                <div class="col-md-6">
-                    <!-- Node Skill Bar -->
-                    <p data-en="NODE" data-pt="NODE">NODE</p>
+                    <!-- Bootstrap Skill Bar -->
                     <div class="skill-bar">
-                        <i class="fab fa-node" style="font-size:48px; color:#385bbd; margin-right:15px;"></i>
+                        <p data-en="BOOTSTRAP" data-pt="BOOTSTRAP">
+                            <i class="fab fa-bootstrap" style="font-size:38px; color:#385bbd; margin-right:10px;"></i>&nbsp;BOOTSTRAP
+                        </p>
+                       <div class="progress">
+                           <div class="progress-bar" data-skill="20"></div>
+                       </div>
+                   </div><br>
+                   <!-- Node Skill Bar -->
+                    <div class="skill-bar">
+                        <p data-en="NODE" data-pt="NODE">
+                            <i class="fab fa-node" style="font-size:38px; color:#385bbd; margin-right:10px;"></i>&nbsp;NODE
+                        </p>
                         <div class="progress">
-                            <div class="progress-bar" data-skill="20"></div>
+                            <div class="progress-bar" data-skill="5"></div>
                         </div>
                     </div><br>
                     <!-- PHP Skill Bar -->
-                    <p data-en="PHP" data-pt="PHP">PHP</p>
-                    <div class="skill-bar">
-                        <i class="fab fa-php" style="font-size:48px; color:#385bbd; margin-right:15px;"></i>
+                     <div class="skill-bar">
+                        <p data-en="PHP" data-pt="PHP">
+                            <i class="fab fa-php" style="font-size:38px; color:#385bbd; margin-right:10px;"></i>&nbsp;PHP
+                        </p>
                         <div class="progress">
                             <div class="progress-bar" data-skill="5"></div>
                         </div>
                     </div><br>
                     <!-- Python Skill Bar -->
-                     <p data-en="PYTHON" data-pt="PYTHON">PYTHON</p>
                      <div class="skill-bar">
-                        <i class="fab fa-python" style="font-size:48px; color:#385bbd; margin-right:15px;"></i>
+                        <p data-en="PYTHON" data-pt="PYTHON">
+                            <i class="fab fa-python" style="font-size:38px; color:#385bbd; margin-right:10px;"></i>&nbsp;PYTHON
+                        </p>
                         <div class="progress">
-                            <div class="progress-bar" data-skill="25"></div>
+                            <div class="progress-bar" data-skill="20"></div>
+                        </div>
+                    </div><br>
+                    <!-- Java Skill Bar -->
+                     <div class="skill-bar">
+                        <p data-en="JAVA" data-pt="JAVA">
+                            <i class="fab fa-java" style="font-size:38px; color:#385bbd; margin-right:10px;"></i>&nbsp;JAVA
+                        </p>
+                        <div class="progress">
+                            <div class="progress-bar" data-skill="5"></div>
                         </div>
                     </div><br>
                     <!-- SQL Skill Bar -->
-                    <p data-en="SQL" data-pt="SQL">SQL</p>
-                    <div class="skill-bar">
-                        <i class="fa fa-database" style="font-size:48px; color:#385bbd; margin-right:15px;"></i>
+                     <div class="skill-bar">
+                        <p data-en="SQL" data-pt="SQL">
+                            <i class="fa fa-database" style="font-size:38px; color:#385bbd; margin-right:10px;"></i>&nbsp;SQL
+                        </p>
                         <div class="progress">
-                            <div class="progress-bar" data-skill="10"></div>
+                            <div class="progress-bar" data-skill="5"></div>
                         </div>
-                    </div>
+                    </div><br>
                 </div>
             </div>
         </div>
