Inclusão da data de formatura da graduação

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary" data-en="February 2021 - Present" data-pt="Fevereiro de 2021 - Presente">February 2021 - Present</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary" data-en="March 2021 - March 2025" data-pt="Março de 2021 - Março de 2025">March 2021 - March 2025</span></div>
                 </div>
             </div>
                      
